WIP:Add to calendar:work on simulator but don't work on real device

--- a/formulaone/Info.plist
+++ b/formulaone/Info.plist
@@ -21,5 +21,7 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSCalendarsUsageDescription</key>
+	<string>Nous avons besoin d&apos;accéder à votre calendrier pour ajouter des événements de course et vous aider à suivre les prochaines courses de Formule 1. Votre calendrier ne sera pas utilisé à d&apos;autres fins ni partagé.</string>
 </dict>
 </plist>
